tests/ui/type-qpath-unexpected1.stderr
error: no rules expected the token `@`
 --> $DIR/type-qpath-unexpected1.rs:5:19
  |
5 |     input = [{ <T @ }]
  |                   ^ no rules expected this token in macro call
